frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: serviduino-ui
  labels:
    app: serviduino-ui
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: serviduino-ui
